--- a/src/components/Navbarcss.scss
+++ b/src/components/Navbarcss.scss
@@ -10,8 +10,8 @@ $main: #2D3949;
   align-items: center;
 }
 body {
-  width: 100%;
-  display: flex;
+  // width: 100%;
+  // display: flex;
   justify-content: center;
   align-items: center;
   font-family: Hack, monospace;
